--- a/rodinia_3.1_profiled/intel/Makefile
+++ b/rodinia_3.1_profiled/intel/Makefile
@@ -126,6 +126,8 @@ inst_with_signal_install:
 	cd openmp/inst_with_signal/pathfinder;                   make;   cp pathfinder $(OMP_BIN_DIR)
 
 mult_event_install:
+	cd openmp/heartwall_load;                             make
+	cd openmp/heartwall_load_with_signal;                             make
 	cd openmp/heartwall_set1;                             make
 	cd openmp/heartwall_set1_with_signal;                             make
 	cd openmp/heartwall_set2;                             make
@@ -719,7 +721,21 @@ heartwall_inst_with_signal_run_5x:
 	GOMP_CPU_AFFINITY="0" OMP_NUM_THREADS=1 /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" openmp/inst_with_signal/heartwall/heartwall data/heartwall/test.avi 104 1 2>&1 | tee heartwall_inst_with_signal_log4
 	GOMP_CPU_AFFINITY="0" OMP_NUM_THREADS=1 /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" openmp/inst_with_signal/heartwall/heartwall data/heartwall/test.avi 104 1 2>&1 | tee heartwall_inst_with_signal_log5
 
-overhead_mult_event_experiment_5x:	heartwall_set1_no_signal_5x heartwall_set1_with_signal_5x heartwall_set2_no_signal_5x heartwall_set2_with_signal_5x heartwall_set3_no_signal_5x heartwall_set3_with_signal_5x heartwall_set4_no_signal_5x heartwall_set4_with_signal_5x
+overhead_mult_event_experiment_5x:	heartwall_load_no_signal_5x heartwall_load_with_signal_5x heartwall_set1_no_signal_5x heartwall_set1_with_signal_5x heartwall_set2_no_signal_5x heartwall_set2_with_signal_5x heartwall_set3_no_signal_5x heartwall_set3_with_signal_5x heartwall_set4_no_signal_5x heartwall_set4_with_signal_5x
+
+heartwall_load_no_signal_5x:
+	GOMP_CPU_AFFINITY="0" OMP_NUM_THREADS=1 /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" openmp/heartwall_load/heartwall data/heartwall/test.avi 104 1 2>&1 | tee heartwall_load_no_signal_log1
+	GOMP_CPU_AFFINITY="0" OMP_NUM_THREADS=1 /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" openmp/heartwall_load/heartwall data/heartwall/test.avi 104 1 2>&1 | tee heartwall_load_no_signal_log2
+	GOMP_CPU_AFFINITY="0" OMP_NUM_THREADS=1 /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" openmp/heartwall_load/heartwall data/heartwall/test.avi 104 1 2>&1 | tee heartwall_load_no_signal_log3
+	GOMP_CPU_AFFINITY="0" OMP_NUM_THREADS=1 /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" openmp/heartwall_load/heartwall data/heartwall/test.avi 104 1 2>&1 | tee heartwall_load_no_signal_log4
+	GOMP_CPU_AFFINITY="0" OMP_NUM_THREADS=1 /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" openmp/heartwall_load/heartwall data/heartwall/test.avi 104 1 2>&1 | tee heartwall_load_no_signal_log5
+
+heartwall_load_with_signal_5x:
+	GOMP_CPU_AFFINITY="0" OMP_NUM_THREADS=1 /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" openmp/heartwall_load_with_signal/heartwall data/heartwall/test.avi 104 1 2>&1 | tee heartwall_load_with_signal_log1
+	GOMP_CPU_AFFINITY="0" OMP_NUM_THREADS=1 /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" openmp/heartwall_load_with_signal/heartwall data/heartwall/test.avi 104 1 2>&1 | tee heartwall_load_with_signal_log2
+	GOMP_CPU_AFFINITY="0" OMP_NUM_THREADS=1 /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" openmp/heartwall_load_with_signal/heartwall data/heartwall/test.avi 104 1 2>&1 | tee heartwall_load_with_signal_log3
+	GOMP_CPU_AFFINITY="0" OMP_NUM_THREADS=1 /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" openmp/heartwall_load_with_signal/heartwall data/heartwall/test.avi 104 1 2>&1 | tee heartwall_load_with_signal_log4
+	GOMP_CPU_AFFINITY="0" OMP_NUM_THREADS=1 /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" openmp/heartwall_load_with_signal/heartwall data/heartwall/test.avi 104 1 2>&1 | tee heartwall_load_with_signal_log5
 
 heartwall_set1_no_signal_5x:
 	GOMP_CPU_AFFINITY="0" OMP_NUM_THREADS=1 /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" openmp/heartwall_set1/heartwall data/heartwall/test.avi 104 1 2>&1 | tee heartwall_set1_no_signal_log1
@@ -782,7 +798,7 @@ heartwall_set4_with_signal_5x:
 	GOMP_CPU_AFFINITY="0" OMP_NUM_THREADS=1 /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" openmp/heartwall_set4_with_signal/heartwall data/heartwall/test.avi 104 1 2>&1 | tee heartwall_set4_with_signal_log5
 
 
-overhead_mult_event_experiment:      heartwall_set1_no_signal heartwall_set1_with_signal heartwall_set2_no_signal heartwall_set2_with_signal heartwall_set3_no_signal heartwall_set3_with_signal heartwall_set4_no_signal heartwall_set4_with_signal
+overhead_mult_event_experiment:      heartwall_load_no_signal heartwall_load_with_signal heartwall_set1_no_signal heartwall_set1_with_signal heartwall_set2_no_signal heartwall_set2_with_signal heartwall_set3_no_signal heartwall_set3_with_signal heartwall_set4_no_signal heartwall_set4_with_signal
 
 heartwall_set1_no_signal:
 	GOMP_CPU_AFFINITY="0" OMP_NUM_THREADS=1 /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" openmp/heartwall_set1/heartwall data/heartwall/test.avi 104 1 2>&1 | tee heartwall_set1_no_signal_log
@@ -841,6 +857,8 @@ OMP_clean:
 	for dir in $(OMP_DIRS) ; do cd openmp/inst_no_signal/$$dir ; make clean ; cd ../../.. ; done
 	for dir in $(OMP_DIRS) ; do cd openmp/inst_with_signal/$$dir ; make clean ; cd ../../.. ; done
 	for dir in $(OMP_DIRS) ; do cd openmp/original/$$dir ; make clean ; cd ../../.. ; done
+	cd openmp/heartwall_load ; make clean ; cd ../..
+	cd openmp/heartwall_load_with_signal ; make clean ; cd ../..
 	cd openmp/heartwall_set1 ; make clean ; cd ../..
 	cd openmp/heartwall_set1_with_signal ; make clean ; cd ../..
 	cd openmp/heartwall_set2 ; make clean ; cd ../..
