--- a/rodinia_3.1_profiled/intel/Makefile
+++ b/rodinia_3.1_profiled/intel/Makefile
@@ -723,6 +723,8 @@ heartwall_inst_with_signal_run_5x:
 
 overhead_mult_event_experiment_5x:	heartwall_load_no_signal_5x heartwall_load_with_signal_5x heartwall_set1_no_signal_5x heartwall_set1_with_signal_5x heartwall_set2_no_signal_5x heartwall_set2_with_signal_5x heartwall_set3_no_signal_5x heartwall_set3_with_signal_5x heartwall_set4_no_signal_5x heartwall_set4_with_signal_5x
 
+overhead_load_experiment_5x:	heartwall_load_no_signal_5x heartwall_load_with_signal_5x
+
 heartwall_load_no_signal_5x:
 	GOMP_CPU_AFFINITY="0" OMP_NUM_THREADS=1 /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" openmp/heartwall_load/heartwall data/heartwall/test.avi 104 1 2>&1 | tee heartwall_load_no_signal_log1
 	GOMP_CPU_AFFINITY="0" OMP_NUM_THREADS=1 /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" openmp/heartwall_load/heartwall data/heartwall/test.avi 104 1 2>&1 | tee heartwall_load_no_signal_log2
