thread sensitivity experiment

--- a/pes-benchs/accuracy-bench-amd/Makefile
+++ b/pes-benchs/accuracy-bench-amd/Makefile
@@ -1,4 +1,4 @@
-all:	cache-misses-install cache-misses-ibs-install cache-misses-ibs-with-signal-install op-ibs-install op-ibs-with-signal-install fetch-ibs-install fetch-ibs-with-signal-install cache-misses-run-5x  cache-misses-ibs-run-5x cache-misses-with-signal-ibs-run-5x op-ibs-run-5x op-with-signal-ibs-run-5x fetch-ibs-run-5x fetch-with-signal-ibs-run-5x
+all:	cache-misses-install cache-misses-ibs-install cache-misses-ibs-with-signal-install op-ibs-install op-ibs-with-signal-install fetch-ibs-install fetch-ibs-with-signal-install cache-misses-ibs-per100-thread-sensitivity cache-misses-run-5x  cache-misses-ibs-run-5x cache-misses-with-signal-ibs-run-5x op-ibs-run-5x op-with-signal-ibs-run-5x fetch-ibs-run-5x fetch-with-signal-ibs-run-5x cache-misses-thread-sensitivity-5x-run
 
 cache-misses-install:	cache_misses_asm_per20.c cache_misses_asm_per40.c cache_misses_asm_per60.c cache_misses_asm_per80.c cache_misses_asm_per100.c
 	gcc cache_misses_asm_per20.c -o cache_misses_asm_per20 -fopenmp
@@ -56,9 +56,16 @@ sampling-rate-sensitivity-install:   cache_misses_asm_ibs_per20_1M.c cache_misse
 	gcc cache_misses_asm_ibs_per20_1K.c cpu_check.c -o cache_misses_asm_ibs_per20_1K -fopenmp
 	gcc cache_misses_asm_ibs_per20_100.c cpu_check.c -o cache_misses_asm_ibs_per20_100 -fopenmp
 
+cache-misses-ibs-per100-thread-sensitivity:
+	gcc cache_misses_asm_ibs_per100_thread_sensitivity.c cpu_check.c -o cache_misses_asm_ibs_per100_thread_sensitivity -fopenmp
+
 cache-misses-run-5x: cache-misses-20-run-5x cache-misses-40-run-5x cache-misses-60-run-5x cache-misses-80-run-5x cache-misses-100-run-5x
 
 cache-misses-run: cache-misses-20-run cache-misses-40-run cache-misses-60-run cache-misses-80-run cache-misses-100-run
+
+cache-misses-thread-sensitivity-run: 1-thread-cache-misses-100-run-thread-sensitivity 2-thread-cache-misses-100-run-thread-sensitivity 4-thread-cache-misses-100-run-thread-sensitivity 8-thread-cache-misses-100-run-thread-sensitivity 16-thread-cache-misses-100-run-thread-sensitivity 32-thread-cache-misses-100-run-thread-sensitivity
+
+cache-misses-thread-sensitivity-5x-run: 1-thread-cache-misses-100-run-5x-thread-sensitivity 2-thread-cache-misses-100-run-5x-thread-sensitivity 4-thread-cache-misses-100-run-5x-thread-sensitivity 8-thread-cache-misses-100-run-5x-thread-sensitivity 16-thread-cache-misses-100-run-5x-thread-sensitivity 32-thread-cache-misses-100-run-5x-thread-sensitivity
 
 cache-misses-20-run-5x:
 	OMP_NUM_THREADS=1 GOMP_CPU_AFFINITY="0" /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" ./cache_misses_asm_per20 2>&1 | tee cache_misses_asm_per20_5x_log
@@ -94,6 +101,68 @@ cache-misses-100-run-5x:
 	OMP_NUM_THREADS=1 GOMP_CPU_AFFINITY="0" /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" ./cache_misses_asm_per100 2>&1 | tee -a cache_misses_asm_per100_5x_log
 	OMP_NUM_THREADS=1 GOMP_CPU_AFFINITY="0" /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" ./cache_misses_asm_per100 2>&1 | tee -a cache_misses_asm_per100_5x_log
 	OMP_NUM_THREADS=1 GOMP_CPU_AFFINITY="0" /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" ./cache_misses_asm_per100 2>&1 | tee -a cache_misses_asm_per100_5x_log
+
+1-thread-cache-misses-100-run-thread-sensitivity:
+	OMP_NUM_THREADS=1 GOMP_CPU_AFFINITY="0" /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" ./cache_misses_asm_ibs_per100_thread_sensitivity 2>&1 | tee 1_thread_cache_misses_per100_thread_sensitivity_log
+
+1-thread-cache-misses-100-run-5x-thread-sensitivity:
+	OMP_NUM_THREADS=1 GOMP_CPU_AFFINITY="0" /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" ./cache_misses_asm_ibs_per100_thread_sensitivity 2>&1 | tee 1_thread_cache_misses_per100_thread_sensitivity_5x_log
+	OMP_NUM_THREADS=1 GOMP_CPU_AFFINITY="0" /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" ./cache_misses_asm_ibs_per100_thread_sensitivity 2>&1 | tee -a 1_thread_cache_misses_per100_thread_sensitivity_5x_log
+	OMP_NUM_THREADS=1 GOMP_CPU_AFFINITY="0" /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" ./cache_misses_asm_ibs_per100_thread_sensitivity 2>&1 | tee -a 1_thread_cache_misses_per100_thread_sensitivity_5x_log
+	OMP_NUM_THREADS=1 GOMP_CPU_AFFINITY="0" /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" ./cache_misses_asm_ibs_per100_thread_sensitivity 2>&1 | tee -a 1_thread_cache_misses_per100_thread_sensitivity_5x_log
+	OMP_NUM_THREADS=1 GOMP_CPU_AFFINITY="0" /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" ./cache_misses_asm_ibs_per100_thread_sensitivity 2>&1 | tee -a 1_thread_cache_misses_per100_thread_sensitivity_5x_log
+
+2-thread-cache-misses-100-run-thread-sensitivity:
+	OMP_NUM_THREADS=2 GOMP_CPU_AFFINITY="0 1" /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" ./cache_misses_asm_ibs_per100_thread_sensitivity 2>&1 | tee 2_thread_cache_misses_per100_thread_sensitivity_log
+
+2-thread-cache-misses-100-run-5x-thread-sensitivity:
+	OMP_NUM_THREADS=2 GOMP_CPU_AFFINITY="0 1" /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" ./cache_misses_asm_ibs_per100_thread_sensitivity 2>&1 | tee 2_thread_cache_misses_per100_thread_sensitivity_5x_log
+	OMP_NUM_THREADS=2 GOMP_CPU_AFFINITY="0 1" /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" ./cache_misses_asm_ibs_per100_thread_sensitivity 2>&1 | tee -a 2_thread_cache_misses_per100_thread_sensitivity_5x_log
+	OMP_NUM_THREADS=2 GOMP_CPU_AFFINITY="0 1" /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" ./cache_misses_asm_ibs_per100_thread_sensitivity 2>&1 | tee -a 2_thread_cache_misses_per100_thread_sensitivity_5x_log
+	OMP_NUM_THREADS=2 GOMP_CPU_AFFINITY="0 1" /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" ./cache_misses_asm_ibs_per100_thread_sensitivity 2>&1 | tee -a 2_thread_cache_misses_per100_thread_sensitivity_5x_log
+	OMP_NUM_THREADS=2 GOMP_CPU_AFFINITY="0 1" /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" ./cache_misses_asm_ibs_per100_thread_sensitivity 2>&1 | tee -a 2_thread_cache_misses_per100_thread_sensitivity_5x_log
+
+4-thread-cache-misses-100-run-thread-sensitivity:
+	OMP_NUM_THREADS=4 GOMP_CPU_AFFINITY="0 1 2 3" /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" ./cache_misses_asm_ibs_per100_thread_sensitivity 2>&1 | tee 4_thread_cache_misses_per100_thread_sensitivity_log
+
+4-thread-cache-misses-100-run-5x-thread-sensitivity:
+	OMP_NUM_THREADS=4 GOMP_CPU_AFFINITY="0 1 2 3" /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" ./cache_misses_asm_ibs_per100_thread_sensitivity 2>&1 | tee 4_thread_cache_misses_per100_thread_sensitivity_5x_log
+	OMP_NUM_THREADS=4 GOMP_CPU_AFFINITY="0 1 2 3" /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" ./cache_misses_asm_ibs_per100_thread_sensitivity 2>&1 | tee -a 4_thread_cache_misses_per100_thread_sensitivity_5x_log
+	OMP_NUM_THREADS=4 GOMP_CPU_AFFINITY="0 1 2 3" /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" ./cache_misses_asm_ibs_per100_thread_sensitivity 2>&1 | tee -a 4_thread_cache_misses_per100_thread_sensitivity_5x_log
+	OMP_NUM_THREADS=4 GOMP_CPU_AFFINITY="0 1 2 3" /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" ./cache_misses_asm_ibs_per100_thread_sensitivity 2>&1 | tee -a 4_thread_cache_misses_per100_thread_sensitivity_5x_log
+	OMP_NUM_THREADS=4 GOMP_CPU_AFFINITY="0 1 2 3" /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" ./cache_misses_asm_ibs_per100_thread_sensitivity 2>&1 | tee -a 4_thread_cache_misses_per100_thread_sensitivity_5x_log
+
+8-thread-cache-misses-100-run-thread-sensitivity:
+	OMP_NUM_THREADS=8 GOMP_CPU_AFFINITY="0 1 2 3 4 5 6 7" /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" ./cache_misses_asm_ibs_per100_thread_sensitivity 2>&1 | tee 8_thread_cache_misses_per100_thread_sensitivity_log
+
+8-thread-cache-misses-100-run-5x-thread-sensitivity:
+	OMP_NUM_THREADS=8 GOMP_CPU_AFFINITY="0 1 2 3 4 5 6 7" /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" ./cache_misses_asm_ibs_per100_thread_sensitivity 2>&1 | tee 8_thread_cache_misses_per100_thread_sensitivity_5x_log
+	OMP_NUM_THREADS=8 GOMP_CPU_AFFINITY="0 1 2 3 4 5 6 7" /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" ./cache_misses_asm_ibs_per100_thread_sensitivity 2>&1 | tee -a 8_thread_cache_misses_per100_thread_sensitivity_5x_log
+	OMP_NUM_THREADS=8 GOMP_CPU_AFFINITY="0 1 2 3 4 5 6 7" /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" ./cache_misses_asm_ibs_per100_thread_sensitivity 2>&1 | tee -a 8_thread_cache_misses_per100_thread_sensitivity_5x_log
+	OMP_NUM_THREADS=8 GOMP_CPU_AFFINITY="0 1 2 3 4 5 6 7" /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" ./cache_misses_asm_ibs_per100_thread_sensitivity 2>&1 | tee -a 8_thread_cache_misses_per100_thread_sensitivity_5x_log
+	OMP_NUM_THREADS=8 GOMP_CPU_AFFINITY="0 1 2 3 4 5 6 7" /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" ./cache_misses_asm_ibs_per100_thread_sensitivity 2>&1 | tee -a 8_thread_cache_misses_per100_thread_sensitivity_5x_log
+
+16-thread-cache-misses-100-run-thread-sensitivity:
+	OMP_NUM_THREADS=16 GOMP_CPU_AFFINITY="0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15" /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" ./cache_misses_asm_ibs_per100_thread_sensitivity 2>&1 | tee 16_thread_cache_misses_per100_thread_sensitivity_log
+
+16-thread-cache-misses-100-run-5x-thread-sensitivity:
+	OMP_NUM_THREADS=16 GOMP_CPU_AFFINITY="0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15" /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" ./cache_misses_asm_ibs_per100_thread_sensitivity 2>&1 | tee 16_thread_cache_misses_per100_thread_sensitivity_5x_log
+	OMP_NUM_THREADS=16 GOMP_CPU_AFFINITY="0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15" /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" ./cache_misses_asm_ibs_per100_thread_sensitivity 2>&1 | tee -a 16_thread_cache_misses_per100_thread_sensitivity_5x_log
+	OMP_NUM_THREADS=16 GOMP_CPU_AFFINITY="0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15" /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" ./cache_misses_asm_ibs_per100_thread_sensitivity 2>&1 | tee -a 16_thread_cache_misses_per100_thread_sensitivity_5x_log
+	OMP_NUM_THREADS=16 GOMP_CPU_AFFINITY="0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15" /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" ./cache_misses_asm_ibs_per100_thread_sensitivity 2>&1 | tee -a 16_thread_cache_misses_per100_thread_sensitivity_5x_log
+	OMP_NUM_THREADS=16 GOMP_CPU_AFFINITY="0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15" /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" ./cache_misses_asm_ibs_per100_thread_sensitivity 2>&1 | tee -a 16_thread_cache_misses_per100_thread_sensitivity_5x_log
+
+32-thread-cache-misses-100-run-thread-sensitivity:
+	OMP_NUM_THREADS=32 GOMP_CPU_AFFINITY="0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31" /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" ./cache_misses_asm_ibs_per100_thread_sensitivity 2>&1 | tee 32_thread_cache_misses_per100_thread_sensitivity_log
+
+32-thread-cache-misses-100-run-5x-thread-sensitivity:
+	OMP_NUM_THREADS=32 GOMP_CPU_AFFINITY="0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31" /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" ./cache_misses_asm_ibs_per100_thread_sensitivity 2>&1 | tee 32_thread_cache_misses_per100_thread_sensitivity_5x_log
+	OMP_NUM_THREADS=32 GOMP_CPU_AFFINITY="0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31" /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" ./cache_misses_asm_ibs_per100_thread_sensitivity 2>&1 | tee -a 32_thread_cache_misses_per100_thread_sensitivity_5x_log
+	OMP_NUM_THREADS=32 GOMP_CPU_AFFINITY="0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31" /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" ./cache_misses_asm_ibs_per100_thread_sensitivity 2>&1 | tee -a 32_thread_cache_misses_per100_thread_sensitivity_5x_log
+	OMP_NUM_THREADS=32 GOMP_CPU_AFFINITY="0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31" /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" ./cache_misses_asm_ibs_per100_thread_sensitivity 2>&1 | tee -a 32_thread_cache_misses_per100_thread_sensitivity_5x_log
+	OMP_NUM_THREADS=32 GOMP_CPU_AFFINITY="0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31" /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" ./cache_misses_asm_ibs_per100_thread_sensitivity 2>&1 | tee -a 32_thread_cache_misses_per100_thread_sensitivity_5x_log
+
+
 
 cache-misses-20-run:
 	OMP_NUM_THREADS=1 GOMP_CPU_AFFINITY="0" /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" ./cache_misses_asm_per20 2>&1 | tee cache_misses_asm_per20_log
@@ -492,4 +561,4 @@ sampling-rate-100:
 	OMP_NUM_THREADS=1 GOMP_CPU_AFFINITY="0" /usr/bin/time -f "Elapsed Time , %e, system, %S, user, %U, memory, %M" ./cache_misses_asm_ibs_per20_100 2>&1 | tee sampling_rate_100_log
 
 clean:
-	rm cache_misses_asm_per20 cache_misses_asm_per40 cache_misses_asm_per60 cache_misses_asm_per80 cache_misses_asm_per100 cache_misses_asm_ibs_per20 cache_misses_asm_ibs_per40 cache_misses_asm_ibs_per60 cache_misses_asm_ibs_per80 cache_misses_asm_ibs_per100 op_asm_ibs_per20 op_asm_ibs_per40 op_asm_ibs_per60 op_asm_ibs_per80 op_asm_ibs_per100 cache_misses_asm_ibs_per20_with_signal cache_misses_asm_ibs_per40_with_signal cache_misses_asm_ibs_per60_with_signal cache_misses_asm_ibs_per80_with_signal cache_misses_asm_ibs_per100_with_signal op_asm_ibs_per20_with_signal op_asm_ibs_per40_with_signal op_asm_ibs_per60_with_signal op_asm_ibs_per80_with_signal op_asm_ibs_per100_with_signal fetch_asm_ibs_per20 fetch_asm_ibs_per40 fetch_asm_ibs_per60 fetch_asm_ibs_per80 fetch_asm_ibs_per100 fetch_asm_ibs_per20_with_signal fetch_asm_ibs_per40_with_signal fetch_asm_ibs_per60_with_signal fetch_asm_ibs_per80_with_signal fetch_asm_ibs_per100_with_signal cache_misses_asm_ibs_per20_1M cache_misses_asm_ibs_per20 cache_misses_asm_ibs_per20_10K cache_misses_asm_ibs_per20_1K cache_misses_asm_ibs_per20_100
+	rm cache_misses_asm_per20 cache_misses_asm_per40 cache_misses_asm_per60 cache_misses_asm_per80 cache_misses_asm_per100 cache_misses_asm_ibs_per20 cache_misses_asm_ibs_per40 cache_misses_asm_ibs_per60 cache_misses_asm_ibs_per80 cache_misses_asm_ibs_per100 op_asm_ibs_per20 op_asm_ibs_per40 op_asm_ibs_per60 op_asm_ibs_per80 op_asm_ibs_per100 cache_misses_asm_ibs_per20_with_signal cache_misses_asm_ibs_per40_with_signal cache_misses_asm_ibs_per60_with_signal cache_misses_asm_ibs_per80_with_signal cache_misses_asm_ibs_per100_with_signal op_asm_ibs_per20_with_signal op_asm_ibs_per40_with_signal op_asm_ibs_per60_with_signal op_asm_ibs_per80_with_signal op_asm_ibs_per100_with_signal fetch_asm_ibs_per20 fetch_asm_ibs_per40 fetch_asm_ibs_per60 fetch_asm_ibs_per80 fetch_asm_ibs_per100 fetch_asm_ibs_per20_with_signal fetch_asm_ibs_per40_with_signal fetch_asm_ibs_per60_with_signal fetch_asm_ibs_per80_with_signal fetch_asm_ibs_per100_with_signal cache_misses_asm_ibs_per20_1M cache_misses_asm_ibs_per20 cache_misses_asm_ibs_per20_10K cache_misses_asm_ibs_per20_1K cache_misses_asm_ibs_per20_100 cache_misses_asm_ibs_per100_thread_sensitivity
